Resolves: fdo#80911 toggle original page orientation on paper fallback

User defined page sizes which match rotated paper sizes available to the
printer don't work correctly when they are already in landscape mode.  i.e. the
orientation should be toggled, not overwritten.

Change-Id: I30dca5f988ad72319410a03f47eccff277be8640